# voicehandler

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci-cd.yaml
src/: main.rs
src/application/: audio_source.rs  env.rs  llm.rs  mod.rs  stt.rs  vad.rs
src/application/env/: aistudio.rs  elevenlabs.rs  logger.rs
src/application/http/: app_state.rs  handlers.rs
src/application/http/handlers/: incoming_local_handler.rs  incoming_twilio_handler.rs
src/domain/: entities.rs  mod.rs  ports.rs  utils.rs
src/domain/entities/: audio_buffer.rs  audio_source_layer.rs  history.rs  job.rs  pipeline.rs  pool.rs
src/domain/entities/history/: history.rs  history_event.rs  history_member.rs
src/domain/entities/pipeline/: pipeline.rs  pool_manager.rs
src/domain/ports/: audio_source.rs  intelligence.rs  llm.rs  stt.rs  vad.rs
src/domain/utils/: audio.rs  convert.rs  reactive.rs
src/infrastructure/: audio_source.rs  intelligence.rs  llm.rs  mod.rs  stt.rs  vad.rs
src/infrastructure/audio_source/: local_source_adapter.rs  twilio_source_adapter.rs
src/infrastructure/llm/: gemini_adapter.rs
src/infrastructure/stt/: scribe_adapter.rs
src/infrastructure/vad/: local_vad.rs
